# HotelRoomThermostat

./: .aider.chat.history.md  .aider.input.history  .gitignore  CHANGELOG.md  LICENSE  README.md  partitions.csv  platformio.ini
doc/: sticker.pptx
docs/: DIAGRAMS.md  FSD.md  WEATHER_ICONS.md
fw/: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  log.txt  partitions.csv  platformio.ini  upit.txt  version_increment.py
fw/lvgl/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_Clean.c  ui_Clean.h  ui_Main.c  ui_Main.h  ui_PinEntry.h  ui_Settings1.c  ui_Settings1.h  ui_Settings2.c  ui_Settings2.h  ui_Thermostat.c  ui_Thermostat.h  ui_events.c  ui_events.h  ui_img_arrow_back_ios_48_png.c  ui_img_arrow_forward_ios_48_png.c  ui_img_cooling_png.c  ui_img_do_not_touch_48_png.c  ui_img_fan_mode_png.c  ui_img_hvac_png.c  ui_img_mur_png.c
fw/lvgl/assets/: ui_font_fontinterlight80.c
include/: ESP32_4848S040.h  debug_logger.h  hal.h  lv_conf.h  lv_i18n.h  modbus_handler.h  settings.h  wifi_manager.h
lvgl/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_Main.c  ui_Main.h  ui_PinEntry.c  ui_Settings1.c  ui_Settings1.h  ui_Settings2.c  ui_Settings3.c  ui_Settings3.h  ui_comp_hook.c  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h  ui_img_clear_night_png.c  ui_img_cloudy_128_png.c  ui_img_cloudy_png.c  ui_img_dnd_png.c  ui_img_foggy_128_png.c  ui_img_foggy_png.c  ui_img_heating_png.c  ui_img_partly_cloudy_day_128_png.c  ui_img_partly_cloudy_day_png.c  ui_img_partly_cloudy_night_128_png.c  ui_img_partly_cloudy_night_png.c  ui_img_rainy_128_png.c  ui_img_rainy_png.c  ui_img_snowy_128_png.c  ui_img_snowy_png.c  ui_img_storm_128_png.c  ui_img_storm_png.c  ui_img_sunny_128_png.c  ui_img_sunny_day_png.c  ui_img_sunny_png.c  ui_img_thermo_dec_png.c  ui_img_thermo_inc_png.c
src/: hal.cpp  hvac.cpp  main.cpp  modbus_handler.cpp  settings.cpp  ui_events.c
sw/: HotelRoomThermostat.sll  HotelRoomThermostat.slp  HotelRoomThermostat.spj  HotelRoomThermostat_events.py  project.info
test/: README_MODBUS_TEST.md  modbus_test.py  quick_test.py  (+1 more)
(+90 files in other folders)
